--- a/app/assets/stylesheets/active_skin.css.sass
+++ b/app/assets/stylesheets/active_skin.css.sass
@@ -1,19 +1,20 @@
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&subset=latin,latin-ext)
 $skinTextColor: #1e2a33 !default
 $skinTextActiveColor: #fff !default
 $skinTextTable: #7f8c8d !default
+$skinFormColor: #95a5a6 !default
 $skinActiveColor: #e73c3c !default
 $skinHeaderBck: #1e2a33 !default
 $panelHeaderBck: #2c3e50 !default
 $skinLogo: #fff image-url("active_skin/default_logo.png") no-repeat 30px 0 !default
+$skinTextFont: 'Helvetica Neue' !default
 
 html
   background: #ecf0f1
-  font-family: 'Source Sans Pro', sans-serif
+  font-family: $skinTextFont, inherit
 
 body.active_admin
   background: #ecf0f1
-  font-family: 'Source Sans Pro', sans-serif
+  font-family: $skinTextFont, inherit
   padding-bottom: 80px
 
 #header
@@ -170,7 +171,7 @@ table.index_table
 .pagination
   margin-top: -2px
   a, span.page.current
-    font-family: 'Source Sans Pro', sans-serif
+    font-family: $skinTextFont, inherit
     border: 1px solid #d3d8dc
     background: #ecf0f1
     @include no-shadow()
@@ -215,19 +216,14 @@ table.index_table
     font-weight: bold
   .filter_form_field
     label 
-      color: #95a5a6
+      color: $skinFormColor
       font-weight: normal
       font-size: 13px
       text-transform: uppercase
-      font-family: 'Source Sans Pro', sans-serif
+      font-family: $skinTextFont, inherit
       padding: 7px 0
 
 #footer
-  position: fixed
-  bottom: 0
-  left: 0
-  right: 0
-  background: #fff
   padding: 15px 30px
   font-size: 13px
   color: $skinTextTable
@@ -258,7 +254,7 @@ form.filter_form a.clear_filters_btn
   @include rounded(0)
   text-shadow: none
   padding: 10px 20px
-  color: #95a5a6
+  color: $skinFormColor
   &:hover
     background: lighten( #ecf0f1, 5% ) !important
 
@@ -309,11 +305,10 @@ form fieldset.inputs
 
 .attributes_table table th, .attributes_table table td
   padding: 10px 0
-  font-family: 'Source Sans Pro', sans-serif
-  color: #95a5a6
+  font-family: $skinTextFont, inherit
+  color: $skinFormColor
 .attributes_table table th
-  font-weight: normal
-  font-size: 13px
+  font-size: 11px
   text-transform: uppercase
 
 .comments form.active_admin_comment fieldset.inputs
@@ -335,7 +330,7 @@ body.logged_out
       border: none
     > h2
       background: $panelHeaderBck
-      font-family: 'Source Sans Pro', sans-serif
+      font-family: $skinTextFont, inherit
       color: #fff
       @include no-shadow()
       @include rounded(0)
@@ -366,7 +361,7 @@ form input[type=url],
 form input[type=tel], 
 form textarea
   @include rounded(0)
-  font-family: 'Source Sans Pro', sans-serif
+  font-family: $skinTextFont, inherit
   padding: 5px 10px
 
 form.filter_form .filter_form_field.filter_date_range input[type=text]
@@ -390,3 +385,6 @@ form fieldset > ol > li fieldset ol li
   clear: both
   select
     margin-top: 6px
+
+a.table_tools_button, .table_tools .dropdown_menu_button
+  font-family: $skinTextFont, inherit
